--- a/2. Feature Engineering.ipynb
+++ b/2. Feature Engineering.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## **3. Data Engineering and Explorative Analysis of the target variable**\n",
-    "In this section we will be using our existing dataframe to engineer features which could help us to predict if a customer is going to return an item or not. As well as explore the relationship between the features and the target variable."
+    "In this section, we will be using our existing data frame to engineer features that could help us to predict if a customer is going to return an item or not. As well as explore the relationship between the features and the target variable."
    ]
   },
   {
@@ -384,7 +384,7 @@
    "metadata": {},
    "source": [
     "### **3.1 Datetime Features** \n",
-    "We start by creating features describing the order and delivery date, in regard to the date an order is placed or an item is delivered. We will calculate multiple features from these dates, such as day of the week, day of the month, month of the year and week of the year."
+    "We start by creating features describing the order and delivery date, in regard to the date an order is placed or an item is delivered. We will calculate multiple features from these dates, such as day of the week, day of the month, the month of the year, and week of the year."
    ]
   },
   {
@@ -935,7 +935,7 @@
    "metadata": {},
    "source": [
     "### **3.2 Define useful functions**\n",
-    "We define a couple useful functions  which will give us help us in determining the return rate of a categorical or integer feature, as well as to create a graphical representation of the data.\n"
+    "We define a couple of useful functions which will give us help us in determining the return rate of a categorical or integer feature, as well as creating a graphical representation of the data."
    ]
   },
   {
@@ -1115,7 +1115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The barplot gives us a visual representation of the return rate for different sizes ordered by the amount of sales. The size **s**, **m**, **l** seem to be not so indicative if an item is going to be returned or not, where as **unsized**, **xs**, **xl** and especially **xxl** seem to be more indicative. The size **xxl** is the only size that has a higher return rate than the other sizes."
+    "The barplot gives us a visual representation of the return rate for different sizes ordered by the number of sales. The size **s**, **m**, and **l** seem to be not so indicative if an item is going to be returned or not, whereas **unsized**, **xs**, **xl** and especially **xxl** seem to be more indicative. The size **xxl** is the only size that has a higher return rate than the other sizes."
    ]
   },
   {
@@ -1234,7 +1234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Different brands seem to also have a varying degree in their return rates."
+    "Different brands seem to also have varying degrees in their return rates."
    ]
   },
   {
@@ -1352,7 +1352,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It seems that there are days in which products get rarely delivered, which can be seen on both the line chart and through seeing the value counts of the columnd **delivery_weekday**. One of the reason could be that the online retailer send packages only at specific days of the week, or uses a delivery company that operates only on certain days of the week."
+    "It seems that there are days in which products get rarely delivered, which can be seen on both the line chart and through seeing the value counts of the column **delivery_weekday**. One of the reasons could be that the online retailer sends packages only on specific days of the week, or uses a delivery company that operates only on certain days of the week."
    ]
   },
   {
@@ -1407,7 +1407,7 @@
    "metadata": {},
    "source": [
     "### **3.5 Order Id Features**\n",
-    "In the previous notebook we derived the order id feature by combining the order id and the item id. This feature in its raw state is not useful for us, but we can use it to get information about the specific order of a customer such as the number of items in the order or the total price of the order."
+    "In the previous notebook, we derived the order id feature by combining the order id and the item id. This feature in its raw state is not useful for us, but we can use it to get information about the specific order of a customer such as the number of items in the order or the total price of the order."
    ]
   },
   {
@@ -1835,9 +1835,6 @@
     }
    ],
    "source": [
-    "# order_item_count = get_return_rate(df.iloc[0:k], 'order_item_count')\n",
-    "# order_item_count\n",
-    "# create_barplot(order_item_count[:30], (12,5) ,my_colors,45, \"order_item_count\")\n",
     "create_boxplot(df.iloc[0:k], (12,5), \"order_item_count\", \"Number of items per order\", (0,25))"
    ]
   },
@@ -1865,8 +1862,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "From the box plots, we can derive that both the number of items and the total price of the order are positively correlated with the return rate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### **3.6 Same items in the order**\n",
-    "Using the order_id we can derive a number of features that gives us the number of same items in regard to one or more categorical features, such as the number of items which have the same color, or the number of items which have the same brand or size. We will be using the python **itertools** library to create a list of all the combinations of the categorical features.\n"
+    "Using the order_id we can derive a number of features that gives us the number of the same items in regard to one or more categorical features, such as the number of items that have the same color, or the number of items that have the same brand or size. We will be using the python **itertools** library to create a list of all the combinations of the categorical features.\n"
    ]
   },
   {
@@ -2372,7 +2376,7 @@
    ],
    "source": [
     "categorical_powerset = powerset(item_descriptions)\n",
-    "# Use the powerset to create new columns indicating the amount of same items in the order\n",
+    "# Use the powerset to create new columns indicating the number of the same items in the order\n",
     "powerset_name_list = []\n",
     "# exclude powerset elements containing both item_id and brand_id as they are redundant\n",
     "exclude = [\"item_id\",\"brand_id\"]\n",
@@ -2386,6 +2390,7 @@
     "        df_group = df[current + [\"order_id\",\"user_title\"]].groupby([\"order_id\"] + current).count().rename(columns={\"user_title\":name})\n",
     "        df = pd.merge(df, df_group, on = current + [\"order_id\"], how = \"left\")\n",
     "        df[name] = df[name] - 1\n",
+    "        # Get numebr of different items in the order\n",
     "        df[name_different] = df[\"order_item_count\"] - df[name] \n",
     "df"
    ]
