--- a/4. Encoding.ipynb
+++ b/4. Encoding.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
     "from useful_functions import *\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
-    "from category_encoders import LeaveOneOutEncoder\n",
+    "from category_encoders import LeaveOneOutEncoder,WOEEncoder\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -18,7 +18,8 @@
     "my_colors = [(0.10588235294117647, 0.6196078431372549, 0.4666666666666667),\n",
     "  (0.8509803921568627, 0.37254901960784315, 0.00784313725490196)]\n",
     "pd.set_option('display.max_columns', None)\n",
-    "from itertools import chain, combinations\n"
+    "from itertools import chain, combinations\n",
+    "import math\n"
    ]
   },
   {
@@ -1026,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1141,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1167,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4037,7 +4038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4057,13 +4058,289 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat_cols += [\"order_weekday\",\"delivery_weekday\",\"order_month\",\"delivery_month\",\"order_day\",\"delivery_day\",\"order_week\",\"delivery_week\",]\n",
-    "cat_cols += [\"order_number_same_item_id\", \"order_number_different_item_id\",\"order_number_same_size\",\"order_number_different_size\",\"order_number_same_item_color\",\"order_number_different_item_color\",\"order_number_same_brand_id\",\"order_number_different_brand_id\",\"order_number_same_item_id_size\",\"order_number_different_item_id_size\",\"order_number_same_item_id_item_color\",\"order_number_different_item_id_item_color\",\"order_number_same_size_item_color\",\"order_number_different_size_item_color\",\"order_number_same_size_brand_id\",\"order_number_different_size_brand_id\",\"order_number_same_item_color_brand_id\",\"order_number_different_item_color_brand_id\",\"order_number_same_item_id_size_item_color\",\"order_number_different_item_id_size_item_color\",\"order_number_same_size_item_color_brand_id\",\"order_number_different_size_item_color_brand_id\",\"order_item_id_nunique\",\"order_size_nunique\",\"order_brand_id_nunique\",\"order_item_color_nunique\",\"order_item_id_color_nunique\",\"order_item_id_size_nunique\",\"order_brand_id_color_nunique\",\"order_brand_id_size_nunique\",\"order_brand_id_item_id_nunique\"]\n",
+    "# cat_cols += [\"order_weekday\",\"delivery_weekday\",\"order_month\",\"delivery_month\",\"order_day\",\"delivery_day\",\"order_week\",\"delivery_week\",]\n",
+    "# cat_cols += [\"order_number_same_item_id\", \"order_number_different_item_id\",\"order_number_same_size\",\"order_number_different_size\",\"order_number_same_item_color\",\"order_number_different_item_color\",\"order_number_same_brand_id\",\"order_number_different_brand_id\",\"order_number_same_item_id_size\",\"order_number_different_item_id_size\",\"order_number_same_item_id_item_color\",\"order_number_different_item_id_item_color\",\"order_number_same_size_item_color\",\"order_number_different_size_item_color\",\"order_number_same_size_brand_id\",\"order_number_different_size_brand_id\",\"order_number_same_item_color_brand_id\",\"order_number_different_item_color_brand_id\",\"order_number_same_item_id_size_item_color\",\"order_number_different_item_id_size_item_color\",\"order_number_same_size_item_color_brand_id\",\"order_number_different_size_item_color_brand_id\",\"order_item_id_nunique\",\"order_size_nunique\",\"order_brand_id_nunique\",\"order_item_color_nunique\",\"order_item_id_color_nunique\",\"order_item_id_size_nunique\",\"order_brand_id_color_nunique\",\"order_brand_id_size_nunique\",\"order_brand_id_item_id_nunique\"]\n",
     "cat_cols += [\"mode_item_id\",\"mode_size\",\"mode_brand_id\",\"mode_item_color\",]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove duplicates from list\n",
+    "# cat_cols = list(dict.fromkeys(cat_cols))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train.drop(\"order_item_id\", axis=1, inplace=True)\n",
+    "df_test.drop(\"order_item_id\", axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encode categorical variables using leave one out encoding\n",
+    "def encode_categorical_columns_WOE(df_train,df_test,columns,sig):\n",
+    "    encoder = WOEEncoder(cols=columns, return_df=True,sigma=sig, verbose=True,regularization=1)\n",
+    "    df_encode_train = encoder.fit_transform(df_train.drop([\"return\"],axis=1),df_train[[\"return\"]])\n",
+    "    df_encode_test = encoder.transform(df_test.drop([\"return\"],axis=1))\n",
+    "    df_encode_train , df_encode_test = df_encode_train.join(df_train[[\"return\"]]), df_encode_test.join(df_test[[\"return\"]])\n",
+    "    return df_encode_train, df_encode_test, encoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train_encoded, df_test_encoded,encoder = encode_categorical_columns_WOE(df_train, df_test, cat_cols, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "1608/1608 [==============================] - 3s 2ms/step - loss: 0.5162 - auc_8: 0.8174 - val_loss: 0.6914 - val_auc_8: 0.6803\n",
+      "Epoch 2/5\n",
+      "1608/1608 [==============================] - 3s 2ms/step - loss: 0.4966 - auc_8: 0.8323 - val_loss: 0.6894 - val_auc_8: 0.6837\n",
+      "Epoch 3/5\n",
+      "1608/1608 [==============================] - 3s 2ms/step - loss: 0.4900 - auc_8: 0.8369 - val_loss: 0.6926 - val_auc_8: 0.6939\n",
+      "Epoch 4/5\n",
+      "1608/1608 [==============================] - 3s 2ms/step - loss: 0.4870 - auc_8: 0.8387 - val_loss: 0.6900 - val_auc_8: 0.6962\n",
+      "Epoch 5/5\n",
+      "1608/1608 [==============================] - 3s 2ms/step - loss: 0.4849 - auc_8: 0.8399 - val_loss: 0.7014 - val_auc_8: 0.6944\n",
+      "ROC on test set: 0.6944263188323798\n"
+     ]
+    }
+   ],
+   "source": [
+    "neural_network_model, neural_network_auc, results_train, results_test,Y_pred = neural_network(df_train_encoded,df_test_encoded,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Xgboost AUC on test set: 0.6578583068049221\n"
+     ]
+    }
+   ],
+   "source": [
+    "xgb_model,xgb_auc = xgboost_classifier(df_train_encoded,df_test_encoded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('user_id', 0.3629143),\n",
+       " ('item_id', 0.0580105),\n",
+       " ('delivery_weekday', 0.04126528),\n",
+       " ('order_item_count', 0.030163879),\n",
+       " ('delivery_time', 0.025723297),\n",
+       " ('item_price_user_id_count', 0.02566001),\n",
+       " ('order_number_different_item_id_size', 0.019650387),\n",
+       " ('order_item_id_size_nunique', 0.017048104),\n",
+       " ('order_number_same_item_id_item_color', 0.016531017),\n",
+       " ('order_number_different_item_id_size_item_color', 0.016489157),\n",
+       " ('delivery_month', 0.015307898),\n",
+       " ('order_number_different_item_id_item_color', 0.014500046),\n",
+       " ('order_sum', 0.0121763535),\n",
+       " ('order_week', 0.0121295275),\n",
+       " ('order_number_different_size_brand_id', 0.011515519),\n",
+       " ('item_price_user_id_min', 0.011067886),\n",
+       " ('order_month', 0.010844291),\n",
+       " ('order_number_same_brand_id', 0.0107789785),\n",
+       " ('order_item_id_nunique', 0.01017751),\n",
+       " ('item_price', 0.009486998),\n",
+       " ('delivery_week', 0.009479318),\n",
+       " ('order_number_different_size_item_color', 0.009225875),\n",
+       " ('item_price_user_id_sum', 0.008792782),\n",
+       " ('order_brand_id_size_nunique', 0.008556078),\n",
+       " ('order_number_same_item_color_brand_id', 0.008501148),\n",
+       " ('order_number_different_item_id', 0.008423128),\n",
+       " ('item_price_user_id_median', 0.0080632195),\n",
+       " ('mode_item_id', 0.0070387973),\n",
+       " ('order_number_different_item_color', 0.0063354713),\n",
+       " ('order_number_same_size', 0.006304286),\n",
+       " ('item_price_brand_id_mad', 0.0062159393),\n",
+       " ('item_price_item_id_mean', 0.006082501),\n",
+       " ('item_price_brand_id_mean', 0.0059021427),\n",
+       " ('order_weekday', 0.0053719496),\n",
+       " ('order_number_different_size_item_color_brand_id', 0.0052824197),\n",
+       " ('order_number_different_item_color_brand_id', 0.0052608633),\n",
+       " ('order_number_same_item_id', 0.0050169216),\n",
+       " ('order_number_same_item_id_size', 0.0049310387),\n",
+       " ('user_reg_age', 0.0047631157),\n",
+       " ('brand_id', 0.0046716044),\n",
+       " ('order_number_same_size_item_color_brand_id', 0.0046546943),\n",
+       " ('mode_brand_id', 0.0046516545),\n",
+       " ('item_price_item_id_median', 0.0044464497),\n",
+       " ('item_price_item_id_std', 0.004420378),\n",
+       " ('order_item_id_color_nunique', 0.004384406),\n",
+       " ('item_price_brand_id_max', 0.004307109),\n",
+       " ('order_brand_id_color_nunique', 0.0042973557),\n",
+       " ('item_price_user_id_mad', 0.004243361),\n",
+       " ('item_price_user_id_mean', 0.00411765),\n",
+       " ('item_price_brand_id_count', 0.0041027036),\n",
+       " ('item_price_item_id_max', 0.0040289382),\n",
+       " ('item_price_item_id_count', 0.0039936323),\n",
+       " ('order_item_color_nunique', 0.0039536706),\n",
+       " ('item_price_brand_id_median', 0.0035583815),\n",
+       " ('mode_size', 0.003514788),\n",
+       " ('item_price_item_id_sum', 0.0034549022),\n",
+       " ('order_size_nunique', 0.003452997),\n",
+       " ('delivery_day', 0.0034336492),\n",
+       " ('average_item_price_order', 0.0033956654),\n",
+       " ('item_price_user_id_std', 0.0033305204),\n",
+       " ('order_number_different_brand_id', 0.0032747388),\n",
+       " ('item_price_item_id_mad', 0.0032279291),\n",
+       " ('order_number_same_item_id_size_item_color', 0.0031817465),\n",
+       " ('item_price_brand_id_std', 0.0031094966),\n",
+       " ('order_number_same_size_brand_id', 0.0031002355),\n",
+       " ('order_number_different_size', 0.00305),\n",
+       " ('item_price_item_id_min', 0.0030373235),\n",
+       " ('item_price_user_id_max', 0.0028686908),\n",
+       " ('user_title', 0.0027629444),\n",
+       " ('item_color', 0.0027395445),\n",
+       " ('order_number_same_item_color', 0.0027248163),\n",
+       " ('order_day', 0.0027232107),\n",
+       " ('order_brand_id_nunique', 0.0027052942),\n",
+       " ('order_brand_id_item_id_nunique', 0.002661416),\n",
+       " ('item_price_brand_id_min', 0.0025190248),\n",
+       " ('user_age', 0.0024922309),\n",
+       " ('mode_item_color', 0.00187911),\n",
+       " ('user_state', 0.0017996673),\n",
+       " ('item_price_brand_id_sum', 0.0017242954),\n",
+       " ('size', 0.0015602428),\n",
+       " ('order_number_same_size_item_color', 0.00145561)]"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " list(sorted(zip(df_train_encoded.columns.drop(\"return\"), xgb_model.feature_importances_), key=lambda xx: xx[1], reverse=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_llr(values):\n",
+    "    \"\"\" Aggregation function for pandas groupby. Needed for llr function. \"\"\"\n",
+    "    n1 = sum(values)\n",
+    "    n0 = len(values) - n1\n",
+    "    return math.log(n1 + 0.5) - math.log(n0 + 0.5)\n",
+    "\n",
+    "\n",
+    "def llr(df, var_names, targets, y='return'):\n",
+    "    \"\"\"\n",
+    "    Args:\n",
+    "    - df        DataFrame >> historical set\n",
+    "    - var_names list >> variables to transform into llr's\n",
+    "    - targets   list >> target DataFrames\n",
+    "    - y         string >> response variable\n",
+    "    Returns list of llr's corresponding to targets.\n",
+    "    \"\"\"\n",
+    "    llrs = df.groupby(var_names)[y].agg(get_llr)\n",
+    "    combos = [x for x in llrs.index]\n",
+    "    \n",
+    "    temp = pd.DataFrame(combos)\n",
+    "    temp['llr'] = llrs.values\n",
+    "    \n",
+    "    temp.columns = var_names + ['llr']\n",
+    "    print(temp)\n",
+    "    \n",
+    "    # res = []\n",
+    "    \n",
+    "    merged = pd.merge(df, temp, how='left', on=var_names).fillna(0)\n",
+    "    # res.append(merged['llr'].values)\n",
+    "    return merged"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       user_id       llr\n",
+      "0            6 -0.389465\n",
+      "1            9  0.938270\n",
+      "2           11 -1.609438\n",
+      "3           13 -1.466337\n",
+      "4           15  0.000000\n",
+      "...        ...       ...\n",
+      "52661    77558  0.367725\n",
+      "52662    77559 -1.098612\n",
+      "52663    77596  1.098612\n",
+      "52664    77597 -2.197225\n",
+      "52665    77598  2.397895\n",
+      "\n",
+      "[52666 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_llrs = llr(df_train,[\"user_id\"],df_test,\"return\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_llrs"
    ]
   },
   {
