--- a/1. EDA and Transformation.ipynb
+++ b/1. EDA and Transformation.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## **1. Introduction**\n",
-    "The main goal of this and the following notebooks is to provide an insightful data analysis and to predict which items are going to be returned using machine learning algorithms. The Transactional data stems from an online retail store in Germany. The data is split into two sets, the first set has the size of almost 500.000 transactions including the label **_\"return\"_** and the second set has the size of 50.000 transactions without the label. Predicting if an item is going to be returned is an important task for the store since any returned item will incur costs associated with the delivery, logistics, and returns. For these reasons, it could be beneficial for the store to try and minimize the number of returned items, by identifying the items that are most likely to be returned and applying countermeasures to reduce their return rate. This could be done by discouraging consumers from buying items that are likely to be returned. \n"
+    "The main goal of this and the following notebooks is to provide an insightful data analysis and to predict which items are going to be returned using machine learning algorithms. The transactional data stems from an online retail store in Germany. The data is split into two sets, the first set has the size of almost 500.000 transactions including the label **_\"return\"_** and the second set has the size of 50.000 transactions without the label. Predicting if an item is going to be returned or not is an important task for the store since any returned item will incur costs associated with the delivery. For this reason, it could be beneficial for the store to try and minimize the number of returned items, by identifying the items that are most likely to be returned and applying countermeasures to reduce their return rate. This could be done by discouraging consumers from buying items that are likely to be returned. \n"
    ]
   },
   {
@@ -29,7 +29,7 @@
     "import seaborn as sns\n",
     "sns.set_theme(palette = \"Dark2\")\n",
     "import datetime\n",
-    "from scipy.stats import ttest_ind\n"
+    "from scipy.stats import ttest_ind"
    ]
   },
   {
@@ -323,14 +323,14 @@
     "columns_name = [\"order_item_id\", \"order_date\", \"delivery_date\", \"item_id\", \"item_size\", \"item_color\", \"brand_id\", \"item_price\", \"user_id\", \"user_title\", \"user_dob\", \"user_state\", \"user_reg_date\",\"return\"]\n",
     "df.columns = columns_name\n",
     "df_u.columns = columns_name[:-1]\n",
-    "df\n"
+    "df"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The known DataFrame includes 14 columns that describe every single item that has been ordered in the store, the unknown has the same columns excluding the label. These columns are:\n",
+    "The known dataframe includes 14 columns that describe every single item that has been ordered in the store, the unknown has the same columns excluding the label. These columns are:\n",
     "1. **\"order_id\"**: Index variable of the item.\n",
     "2. **\"order_date\"**: Date of the order using the format **\"YYYY-MM-DD\"**.\n",
     "3. **\"delivery_date\"**: Delivery date of the order using the format **\"YYYY-MM-DD\"**.\n",
@@ -676,6 +676,7 @@
     }
    ],
    "source": [
+    "# Replace the missing values with np.nan\n",
     "df_combined[\"delivery_date\"].replace(\"?\", np.nan, inplace=True)\n",
     "df_combined[\"user_dob\"].replace(\"?\", np.nan, inplace=True)\n",
     "# Check which columns have missing values\n",
@@ -754,14 +755,14 @@
     "plot.set(xlabel = \"Date\", ylabel = \"Number of items\", xticks = np.arange(0, 460, step = 30),\n",
     "         title = \"Items ordered per day\")\n",
     "# plt.legend()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Overall the line chart has 4 big peaks which coincide with the seasons of the year and the holidays around Christmas and New Year's Eve. The biggest spike in sales is around the end of June. The reason for this could be a summer sale and the fact that people are more likely to buy items in the summertime, maybe in preparation for their summer vacation, or to refresh their wardrobe in preparation for the summer. A slight downward trend in the number of items sold can be seen between the end of September and the end of December."
+    "Overall the line chart has **4 big peaks** which coincide with the seasons of the year and the holidays around Christmas and New Year's Eve. The biggest spike in sales is around the end of June. The reason for this could be a **summer sale** and the fact that people are more likely to buy items in the summertime, maybe in preparation for their summer vacation, or to refresh their wardrobe in preparation for the summer. A slight downward trend in the number of items sold can be seen between the end of September and the end of December."
    ]
   },
   {
@@ -777,11 +778,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_combined[\"delivery_date\"].value_counts().sort_index()\n",
+    "# Convert to datetime format %Y-%m-%d\n",
     "df_combined[\"order_date\"] = pd.to_datetime(df_combined[\"order_date\"], format=\"%Y-%m-%d\")\n",
     "df_combined[\"delivery_date\"] = pd.to_datetime(df_combined[\"delivery_date\"], format=\"%Y-%m-%d\")\n",
     "df_combined[\"user_dob\"] = pd.to_datetime(df_combined[\"user_dob\"], format=\"%Y-%m-%d\", errors = 'coerce')\n",
-    "df_combined[\"user_reg_date\"]  = pd.to_datetime(df_combined[\"user_reg_date\"], format=\"%Y-%m-%d\")\n"
+    "df_combined[\"user_reg_date\"]  = pd.to_datetime(df_combined[\"user_reg_date\"], format=\"%Y-%m-%d\")"
    ]
   },
   {
@@ -1203,7 +1204,7 @@
    ],
    "source": [
     "delivery_time_median = df_combined[\"delivery_time\"].median()\n",
-    "# Replace negative values and values greater than the 1500 with the median\n",
+    "# Replace negative values and values greater than 1000 with the median\n",
     "df_combined[\"delivery_time\"] = df_combined[\"delivery_time\"].apply(lambda x: delivery_time_median if x < 0 or x > 1000 else x)\n",
     "df_combined[\"delivery_time\"] = df_combined[\"delivery_time\"].astype(int)\n",
     "df_combined[\"delivery_time\"].describe()"
@@ -1236,7 +1237,7 @@
     }
    ],
    "source": [
-    "# Line chart of order_date using sns\n",
+    "# Distplot of delivery_time\n",
     "plt.figure(figsize=(12, 6))\n",
     "plot = sns.distplot(df_combined[\"delivery_time\"])\n",
     "plot.set(xlabel = \"Delivery time\", ylabel = \"Density\", xticks = np.arange(0, 175, step = 10),\n",
@@ -1285,7 +1286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Overall we managed to impute the missing values and the date values that are equal to ***1990-12-31*** and to create a new column _delivery_time_ that shows the time between the order date and the delivery date which we are going to use later on. The distribution of the delivery time looks like exponential distribution. This could be explained by the fact that delivering an item can potentially take a very long time due to unforeseen complications, such as availability of the item, supply chain and logistics problems as well as delivery problems."
+    "Overall we managed to impute the missing values and the date values that are equal to ***1990-12-31*** and to create a new column _delivery_time_ that shows the time between the order date and the delivery date which we are going to use later on. The distribution of the delivery time looks like the **exponential distribution**. This could be explained by the fact that delivering an item can potentially take a very long time due to unforeseen complications, such as **availability** of the item, supply chain and **logistics problems** as well as **delivery problems**."
    ]
   },
   {
@@ -1726,10 +1727,8 @@
     }
    ],
    "source": [
-    "\n",
     "size_dict = df_combined[\"size\"].value_counts().to_dict()\n",
-    "# barplot of size\n",
-    "\n",
+    "# barplot of items sold by size\n",
     "plt.figure(figsize=(12, 6))\n",
     "plot = sns.barplot(x = list(size_dict.keys()), y = list(size_dict.values()))\n",
     "plot.set(xlabel = \"Size\", ylabel = \"Number of items\", title = \"Number of items sold per size\")\n",
@@ -1741,7 +1740,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The bar chart shows us that the most common sizes sold are the sizes _\"s\"_, _\"m\"_,   _\"l_\"_, as well as the unsized type of items"
+    "The bar chart shows us that the most common sizes sold are the sizes **\"s\"**, **\"m\"**, **\"l\"**, as well as the unsized type of items"
    ]
   },
   {
@@ -1749,7 +1748,7 @@
    "metadata": {},
    "source": [
     "### **2.5 Item_color**\n",
-    "The color of an item could be a decisive factor in determining if an item will be returned or not. As reasoning, one can argue, that in an online retail setting customers could potentially buy the same item in different colors, in order to see which color suits them better since trying out the item is not possible in contrast to brick and mortar stores. This could be a good indicator if an item is going to be returned or not.  "
+    "The color of an item could be a decisive factor in determining if an item will be returned or not. One can argue, that in an online retail setting customers could potentially buy the same item in different colors, in order to see which color suits them better since trying out the item is not possible in contrast to brick and mortar stores. This could be a good indicator if an item is going to be returned or not.  "
    ]
   },
   {
@@ -1885,7 +1884,7 @@
    "metadata": {},
    "source": [
     "### **2.6 Brand_id**\n",
-    "Brand_id can prove to be an important feature since it indicates if a customer is buying multiple items from the same brand. This could be a good indicator if an item is going to be returned or not. Furthermore, a specific brand may have a higher or lower return rate than other brands."
+    "Brand_id can prove to be an important feature since it indicates if a customer is buying multiple items from the same brand. Specific brands may also have a higher or lower return rate than other."
    ]
   },
   {
@@ -1948,7 +1947,7 @@
    ],
    "source": [
     "brand_id_count = df_combined[\"brand_id\"].value_counts()\n",
-    "brand_id_count.describe(percentiles=[0.10,0.25, 0.5, 0.75])\n"
+    "brand_id_count.describe(percentiles=[0.10,0.25, 0.5, 0.75])"
    ]
   },
   {
@@ -1989,7 +1988,7 @@
    "metadata": {},
    "source": [
     "### **2.7 Item_price**\n",
-    "The price of an item could have an effect on the return rate of an item. We can hypothesize that the higher the price, the more likely it is that the item is going to be returned, as the incentive for the customer to get his money back if he doesn't like the item is higher the higher the price is."
+    "The price of an item could have an effect on the return rate of an item. We can hypothesize that the **higher** the price, the **more likely** it is that the item is going to be **returned**, as the incentive for the customer to get his money back if he doesn't like the item is higher the higher the price is."
    ]
   },
   {
@@ -2148,7 +2147,7 @@
     }
    ],
    "source": [
-    "# Perform t-test to see if the price of returned items is greater from the price of non-returned items\n",
+    "# Perform t-test to see if the price of returned items is greater than the price of non-returned items\n",
     "t, p = ttest_ind(price_returned, price_not_returned, equal_var=False)\n",
     "print(\"t-test result:            t = %g  p = %g\" % (t, p))"
    ]
@@ -2157,7 +2156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since the value of $ p < 0.05$, we can reject the null hypothesis and conclude that the price of the items affects their return rate."
+    "Since the value of $ p < 0.05$, we can reject the null hypothesis and conclude that the price of the items **affects** their return rate."
    ]
   },
   {
@@ -2165,7 +2164,7 @@
    "metadata": {},
    "source": [
     "### **2.8 User_id**\n",
-    "User_id is perhaps one of the most important features in the data set since every customer has different shopping habits which dictate how likely they are to return an item. Customers who order multiple of the same item which only differs in size and or color will have a higher return rate and thus can be used as a good indicator if an item is going to be returned or not. Others might be more environmentally friendly and thus order items they really need which leads to a lower return rate. Furthermore by combining the date of the order and the customer id we can get a new feature indicating the complete order of a single customer."
+    "User_id is perhaps one of the most important features in the data set since every customer has **different shopping habits** which dictate how likely they are to return an item. Customers who order multiple of the same item which only differs in size and or color will have a higher return rate and thus can be used as a good indicator if an item is going to be returned or not. Others might be more environmentally friendly and thus order items they really need which leads to a lower return rate. Furthermore by combining the date of the order and the customer id we can get a new feature indicating the complete order of a single customer."
    ]
   },
   {
@@ -2638,7 +2637,7 @@
    "source": [
     "# Get all unique customers titles\n",
     "user_list = df_combined[[\"user_id\", \"user_title\"]].drop_duplicates().reset_index(drop=True)\n",
-    "user_list\n"
+    "user_list"
    ]
   },
   {
@@ -2678,7 +2677,7 @@
    "metadata": {},
    "source": [
     "### **2.10 User_dob**\n",
-    "User date of birth is not usable in its current form, furthermore, there appears to be a large number of missing values. One reason for that could be that customers a hesitant to give their date of birth out of privacy concerns. We will first calculate the age of a customer by subtracting the date of birth from the order date, instead of just subtracting a static value. Even though the time span of the data we are analyzing is around 6 months, this is the correct way of converting date of birth to age as we are interested in knowing the age of the customer at the time he orders the product. If we are dealing with data spanning **multiple** years, then we can get a correct estimate of the customer's age."
+    "User date of birth is not usable in its current form, furthermore, there appears to be a large number of missing values. One reason for that could be that customers a hesitant to give their date of birth out of **privacy concerns**. We will first calculate the age of a customer by subtracting the date of birth from the order date, instead of just subtracting a static value. Even though the time span of the data we are analyzing is around 12 months, this is the correct way of converting date of birth to age as we are interested in knowing the age of the customer at the time he orders the product. If we are dealing with data spanning **multiple** years, then we can get a correct estimate of the customer's age."
    ]
   },
   {
