--- a/2. Feature Engineering.ipynb
+++ b/2. Feature Engineering.ipynb
@@ -412,7 +412,7 @@
     "\n",
     "# Get week of the year for order date and delivery date\n",
     "df['order_week'] = df['order_date'].dt.week\n",
-    "df['delivery_week'] = df['delivery_date'].dt.week\n"
+    "df['delivery_week'] = df['delivery_date'].dt.week"
    ]
   },
   {
@@ -1246,7 +1246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While the difference between the return rate of the different colors is not that big, there are still quite a few colors with high variability in their return rate. Especially the color **pallid** seems to have the biggest difference in its return rate."
+    "While the difference between the return rate of the different colors is not that big, there are still quite a few colors with high variability in their return rate."
    ]
   },
   {
@@ -1401,7 +1401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It seems that there are days in which products get rarely delivered, which can be seen on both the line chart and through seeing the value counts of the column **delivery_weekday**. One of the reasons could be that the online retailer sends packages only on specific days of the week, or uses a delivery company that operates only on certain days of the week."
+    "It seems that there are days in which products get rarely delivered, which can be seen on both the line chart and through seeing the value counts of the column **delivery_weekday**. One of the reasons could be that the online retailer sends packages only on specific days of the week, or uses a delivery company that operates only on certain days of the week. Deliveries on the weekend seem to be less likely to be returned than deliveries on weekdays. Only a tiny fraction of the deliveries are made on the **weekend**."
    ]
   },
   {
@@ -1432,6 +1432,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It seems that the younger a user is, the more likely it is that he or she will return an item."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -1449,6 +1456,13 @@
    ],
    "source": [
     "user_age = create_boxplot(df.iloc[0:k], (14,6), \"user_reg_age\", \"User Reg Age\", (-50,800))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The registration age of the customer in days at the time of the order seems to affect the customer return rate, with the younger customers being **less likely** to return an item."
    ]
   },
   {
@@ -1997,6 +2011,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The higher the number of items per order, the higher the probability that the item of that order will be returned."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
@@ -2020,7 +2041,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the box plots, we can derive that both the number of items and the total price of the order are positively correlated with the return rate."
+    "The same holds for the total price of the order, as a an item is more likely to be returned if the total price of the order is higher."
    ]
   },
   {
@@ -2028,7 +2049,7 @@
    "metadata": {},
    "source": [
     "### **3.6 Same items in the order**\n",
-    "Using the order_id we can derive a number of features that gives us the number of the same items in regard to one or more categorical features, such as the number of items that have the same color, or the number of items that have the same brand or size. We will be using the python **itertools** library to create a list of all the combinations of the categorical features.\n"
+    "Using the **order_id** we can derive a number of features that gives us the number of the same items in regard to one or more categorical features, such as the number of items that have the same color, or the number of items that have the same brand or size and are part of the same order. We will be using the python **itertools** library to create a list of all the combinations of the categorical features.\n"
    ]
   },
   {
